# whirl

./: Cargo.toml  README.md  bench
examples/: echo.rs
src/: blocking.rs  ebuf.rs  lib.rs  runtime.rs
src/eventfd/: zz
src/eventfd/src/: lib.rs  lib.rs.orig  poll.rs
src/io/: mod.rs
src/net/tcp/: listener.rs  stream.rs
src/proactor/: io_uring.rs  mod.rs
