[package]
name = "whirl"
version = "0.0.0"
edition = "2018"

[dependencies]
once_cell = "1.4"
num_cpus = "1.13"
concurrent-queue = "1.2"
async-task = "4.0"
rand = "0.8"
libc = "0.2"
slab = "0.4"
socket2 = "0.3"
cfg-if = "0.1"
pin-project-lite = "0.2"
io-uring = { version = "0.5.1", features = ["unstable"]}
futures-util = { version = "0.3", features = ["io"] }
parking_lot = "0.11"
eventfd = { path = "./src/eventfd" }